[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/themes/default/default.tres" type="Theme" id=1]
[ext_resource path="res://src/interfaces/editor/ui/scene_view/scene_view.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/interfaces/editor/ui/editor.gd" type="Script" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="Editor" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 6.0
margin_right = -6.0
margin_bottom = -6.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EditorBar" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1012.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 24 )

[node name="Left" type="HBoxContainer" parent="VBoxContainer/EditorBar"]
margin_right = 334.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Center" type="HBoxContainer" parent="VBoxContainer/EditorBar"]
margin_left = 338.0
margin_right = 673.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Right" type="HBoxContainer" parent="VBoxContainer/EditorBar"]
margin_left = 677.0
margin_right = 1012.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Workspace" type="HSplitContainer" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 1012.0
margin_bottom = 588.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LeftDocks" type="PanelContainer" parent="VBoxContainer/Workspace"]
margin_right = 150.0
margin_bottom = 560.0
rect_min_size = Vector2( 150, 0 )

[node name="VSplitContainer" type="VSplitContainer" parent="VBoxContainer/Workspace/LeftDocks"]
margin_left = 6.0
margin_top = 4.0
margin_right = 144.0
margin_bottom = 556.0

[node name="TopDock" type="PanelContainer" parent="VBoxContainer/Workspace/LeftDocks/VSplitContainer"]
margin_right = 138.0
margin_bottom = 272.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="VBoxContainer/Workspace/LeftDocks/VSplitContainer/TopDock"]
margin_right = 138.0
margin_bottom = 272.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BottomDock" type="PanelContainer" parent="VBoxContainer/Workspace/LeftDocks/VSplitContainer"]
margin_top = 280.0
margin_right = 138.0
margin_bottom = 552.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="VBoxContainer/Workspace/LeftDocks/VSplitContainer/BottomDock"]
margin_right = 138.0
margin_bottom = 272.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer/Workspace"]
margin_left = 158.0
margin_right = 1012.0
margin_bottom = 560.0
size_flags_horizontal = 3
size_flags_vertical = 3
split_offset = 250

[node name="VSplitContainer" type="VSplitContainer" parent="VBoxContainer/Workspace/HSplitContainer"]
margin_right = 696.0
margin_bottom = 560.0
size_flags_horizontal = 3
size_flags_vertical = 3
split_offset = 450

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Workspace/HSplitContainer/VSplitContainer"]
margin_right = 696.0
margin_bottom = 419.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ToolBar" type="PanelContainer" parent="VBoxContainer/Workspace/HSplitContainer/VSplitContainer/VBoxContainer"]
margin_right = 696.0
margin_bottom = 32.0

[node name="Tools" type="HBoxContainer" parent="VBoxContainer/Workspace/HSplitContainer/VSplitContainer/VBoxContainer/ToolBar"]
margin_left = 6.0
margin_top = 4.0
margin_right = 690.0
margin_bottom = 28.0
rect_min_size = Vector2( 24, 24 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SceneViews" type="PanelContainer" parent="VBoxContainer/Workspace/HSplitContainer/VSplitContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 696.0
margin_bottom = 419.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SceneView" parent="VBoxContainer/Workspace/HSplitContainer/VSplitContainer/VBoxContainer/SceneViews" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 6.0
margin_top = 4.0
margin_right = 690.0
margin_bottom = 379.0

[node name="BottomDock" type="PanelContainer" parent="VBoxContainer/Workspace/HSplitContainer/VSplitContainer"]
margin_top = 427.0
margin_right = 696.0
margin_bottom = 560.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="Panel" parent="VBoxContainer/Workspace/HSplitContainer/VSplitContainer/BottomDock"]
margin_left = 6.0
margin_top = 4.0
margin_right = 690.0
margin_bottom = 129.0
rect_min_size = Vector2( 0, 125 )

[node name="RightPanels" type="PanelContainer" parent="VBoxContainer/Workspace/HSplitContainer"]
margin_left = 704.0
margin_right = 854.0
margin_bottom = 560.0
rect_min_size = Vector2( 150, 0 )

[node name="VSplitContainer" type="VSplitContainer" parent="VBoxContainer/Workspace/HSplitContainer/RightPanels"]
margin_left = 6.0
margin_top = 4.0
margin_right = 144.0
margin_bottom = 556.0

[node name="TopDock" type="PanelContainer" parent="VBoxContainer/Workspace/HSplitContainer/RightPanels/VSplitContainer"]
margin_right = 138.0
margin_bottom = 272.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="VBoxContainer/Workspace/HSplitContainer/RightPanels/VSplitContainer/TopDock"]
margin_right = 138.0
margin_bottom = 272.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BottomDock" type="PanelContainer" parent="VBoxContainer/Workspace/HSplitContainer/RightPanels/VSplitContainer"]
margin_top = 280.0
margin_right = 138.0
margin_bottom = 552.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="VBoxContainer/Workspace/HSplitContainer/RightPanels/VSplitContainer/BottomDock"]
margin_right = 138.0
margin_bottom = 272.0
size_flags_horizontal = 3
size_flags_vertical = 3
